ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 3.0.0, 3.1.0
    • Affects Version/s: 3.0.0-rc11
    • Component/s: Write Ops
    • Environment:
      Windows Server 2012 R2
    • Fully Compatible
    • Windows
    • Quint 3.1.0
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      2015-02-26T15:05:50.892-0800 F REPL     [conn96] replSet error : logOp() but can't accept write to collection test.stages_delete
      2015-02-26T15:05:50.892-0800 I -        [conn96] Fatal Assertion 17405
      2015-02-26T15:05:51.304-0800 I CONTROL  [conn96] mongod.exe    ...\src\mongo\util\stacktrace_win.cpp(175)                       mongo::printStackTrace+0x43
      2015-02-26T15:05:51.304-0800 I CONTROL  [conn96] mongod.exe    ...\src\mongo\util\log.cpp(135)                                  mongo::logContext+0x8f
      2015-02-26T15:05:51.304-0800 I CONTROL  [conn96] mongod.exe    ...\src\mongo\util\assert_util.cpp(165)                          mongo::fassertFailed+0x77
      2015-02-26T15:05:51.304-0800 I CONTROL  [conn96] mongod.exe    ...\src\mongo\db\repl\oplog.cpp(238)                             mongo::repl::`anonymous namespace'::_logOpRS+0x2b5
      2015-02-26T15:05:51.304-0800 I CONTROL  [conn96] mongod.exe    ...\src\mongo\db\repl\oplog.cpp(380)                             mongo::repl::logOp+0x8f
      2015-02-26T15:05:51.304-0800 I CONTROL  [conn96] mongod.exe    ...\src\mongo\db\exec\delete.cpp(158)                            mongo::DeleteStage::work+0x31e
      2015-02-26T15:05:51.304-0800 I CONTROL  [conn96] mongod.exe    ...\src\mongo\db\exec\fetch.cpp(94)                              mongo::FetchStage::work+0xea
      2015-02-26T15:05:51.304-0800 I CONTROL  [conn96] mongod.exe    ...\src\mongo\db\query\plan_executor.cpp(328)                    mongo::PlanExecutor::getNextSnapshotted+0xdb
      2015-02-26T15:05:51.304-0800 I CONTROL  [conn96] mongod.exe    ...\src\mongo\db\query\plan_executor.cpp(286)                    mongo::PlanExecutor::getNext+0x41
      2015-02-26T15:05:51.304-0800 I CONTROL  [conn96] mongod.exe    ...\src\mongo\db\exec\stagedebug_cmd.cpp(163)                    mongo::StageDebugCmd::run+0x42d
      2015-02-26T15:05:51.304-0800 I CONTROL  [conn96] mongod.exe    ...\src\mongo\db\dbcommands.cpp(1317)                            mongo::_execCommand+0x72
      2015-02-26T15:05:51.304-0800 I CONTROL  [conn96] mongod.exe    ...\src\mongo\db\dbcommands.cpp(1535)                            mongo::Command::execCommand+0xd7c
      2015-02-26T15:05:51.304-0800 I CONTROL  [conn96] mongod.exe    ...\src\mongo\db\dbcommands.cpp(1607)                            mongo::_runCommands+0x434
      2015-02-26T15:05:51.304-0800 I CONTROL  [conn96] mongod.exe    ...\src\mongo\db\query\find.cpp(137)                             mongo::runCommands+0x43
      2015-02-26T15:05:51.304-0800 I CONTROL  [conn96] mongod.exe    ...\src\mongo\db\query\find.cpp(606)                             mongo::runQuery+0x3b3
      2015-02-26T15:05:51.304-0800 I CONTROL  [conn96] mongod.exe    ...\src\mongo\db\instance.cpp(220)                               mongo::receivedQuery+0x378
      2015-02-26T15:05:51.304-0800 I CONTROL  [conn96] mongod.exe    ...\src\mongo\db\instance.cpp(403)                               mongo::assembleResponse+0x350
      2015-02-26T15:05:51.304-0800 I CONTROL  [conn96] mongod.exe    ...\src\mongo\db\db.cpp(206)                                     mongo::MyMessageHandler::process+0xbd
      2015-02-26T15:05:51.304-0800 I CONTROL  [conn96] mongod.exe    ...\src\mongo\util\net\message_server_port.cpp(231)              mongo::PortMessageServer::handleIncomingMsg+0x553
      2015-02-26T15:05:51.304-0800 I CONTROL  [conn96] mongod.exe    ...\src\third_party\boost\libs\thread\src\win32\thread.cpp(185)  boost::`anonymous namespace'::thread_start_function+0x21
      2015-02-26T15:05:51.304-0800 I CONTROL  [conn96] mongod.exe    f:\dd\vctools\crt\crtw32\startup\threadex.c(376)                 _callthreadstartex+0x17
      2015-02-26T15:05:51.304-0800 I CONTROL  [conn96] mongod.exe    f:\dd\vctools\crt\crtw32\startup\threadex.c(354)                 _threadstartex+0x102
      2015-02-26T15:05:51.304-0800 I CONTROL  [conn96] KERNEL32.DLL                                                                   BaseThreadInitThunk+0xd
      2015-02-26T15:05:51.304-0800 I CONTROL  [conn96]
      2015-02-26T15:05:51.304-0800 I -        [conn96]
      
      ***aborting after fassert() failure
      

      hash: 7007e0e571b859f3aed79a61c6821cc552fb2685

            Assignee:
            J Rassi (Inactive)
            Reporter:
            Robert Guo (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            11 Start watching this issue

              Created:
              Updated:
              Resolved: