SERVER-17403 Fix StageDebugCmd command registration

(cherry picked from commit 7d588bd39adc253e0b32df0049569888d392159b)